# DRD

./: .gitignore  CT_GAMEPLAY_MAPPING.md  CT_IMPLEMENTATION_PRIORITY.md  EDITOR_ANALYSIS.md  IMPLEMENTATION_STATUS.md  Minigames_Immersifs.md  PHASE1_COMPLETE.md  PROJECT_OVERVIEW.md  README.md  SOUFFRANCE_HEALTH_SYSTEM.md  STATUS_REPORT.md  UNITY_IMPLEMENTATION_ANALYSIS.md  VIDEO_GAME_XP_SYSTEM.md  VISUAL_PARITY_ANALYSIS.md  next.config.js  package-lock.json  package.json  tailwind.config.js
.cursor/plans/: arena_framework_game_features_implementation_43ada0fe.plan.md  editor_engine_comparison_analysis_e4c00587.plan.md  live_in-game_editor_implementation_88797b61.plan.md  tes_arena_c++_framework_3bf43906.plan.md
.cursor/rules/: cursorrules.mdc
Des Récits Discordants 2025/systeme_drd/: 01_Systeme_General.md  03_Attributs_Aptitudes_Competences.md  06_Combat.md
Godot RPG Template/: project.godot
Godot RPG Template/resources/: action_data.gd  action_data.gd.uid  aptitude_data.gd  aptitude_data.gd.uid  attribute_data.gd  attribute_data.gd.uid  competence_data.gd  competence_data.gd.uid  mastery_registry.gd  mastery_registry.gd.uid  souffrance_data.gd  souffrance_data.gd.uid
Godot RPG Template/scenes/: character_sheet.tscn
Godot RPG Template/scenes/components/: action_node.tscn  aptitude_column.tscn  (+2 more)
Godot RPG Template/scripts/: accordion_button.gd  accordion_button.gd.uid  action_node.gd  action_node.gd.uid  aptitude_column.gd  aptitude_column.gd.uid  attribute_calculator.gd  attribute_calculator.gd.uid  attribute_node.gd  attribute_node.gd.uid  build_scene.gd  build_scene.gd.uid  character_sheet.gd  character_sheet.gd.uid  character_stats.gd  character_stats.gd.uid  competence_node.gd  competence_node.gd.uid  generate_scene_tool.gd  generate_scene_tool.gd.uid  mastery_node.gd  mastery_node.gd.uid  scene_generator.gd  scene_generator.gd.uid  souffrance_node.gd  souffrance_node.gd.uid  stat_layer_roles.gd  stat_layer_roles.gd.uid  stat_math_mapping.gd  stat_math_mapping.gd.uid  stats_debug_overlay.gd  stats_debug_overlay.gd.uid  stats_player_controller.gd  stats_player_controller.gd.uid  stats_sandbox_manager.gd  stats_sandbox_manager.gd.uid
arena-framework/: BUILD.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  vcpkg.json
arena-framework/src/framework/assets/: AssetLoader.cpp  AssetLoader.h
arena-framework/src/framework/core/: Input.cpp  Input.h  Time.cpp  Time.h  Window.cpp  Window.h
arena-framework/src/framework/math/: Mat4.cpp  Mat4.h  Vec2.h  Vec3.h  Vec4.h
arena-framework/src/framework/renderer/: Font.cpp  Font.h  RaycastCamera.cpp  RaycastCamera.h  Raycaster.cpp  Raycaster.h  Renderer2D.cpp  Renderer2D.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  UIRenderer.cpp  UIRenderer.h
arena-framework/src/framework/utils/: DebugOverlay.cpp  DebugOverlay.h  Log.cpp  Log.h
arena-framework/src/game/: main.cpp
arena-framework/src/game/actors/: Actor.cpp  Actor.h  Player.cpp  Player.h
arena-framework/src/game/data/: GameData.cpp  GameData.h
arena-framework/src/game/items/: Item.cpp  Item.h
arena-framework/src/game/simulation/: Combat.cpp  Combat.h
arena-framework/src/game/systems/: QuestSystem.cpp  QuestSystem.h  SaveSystem.cpp  SaveSystem.h
arena-framework/src/game/ui/: Dialogue.cpp  Dialogue.h  HUD.cpp  HUD.h  Inventory.cpp  Inventory.h  Menu.cpp  Menu.h
arena-framework/src/game/world/: Chunk.cpp  Chunk.h  Collision.cpp  Collision.h  Door.cpp  Door.h  GridMap.cpp  GridMap.h  MapGenerator.cpp  MapGenerator.h
src/app/: globals.css  layout.tsx  page.tsx
src/components/: CharacterSheet.tsx  GameCanvas.tsx
src/editor/: GameEditor.tsx  REFACTORING_SUMMARY.md
src/lib/: constants.ts  utils.ts
(+69 files in other folders)
